@@ -1,3 +1,7 @@
+2002-10-02  Masahiro Sakai  <sakai@tom.sfc.keio.ac.jp>
+
+	* src/rbglib.h: define LONG2NUM and ULONG2NUM unless already defined.
+
 2002-09-30  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* src/rbgutil.[ch]: File added.
